--- a/styles/favoritos/_main.scss
+++ b/styles/favoritos/_main.scss
@@ -1,4 +1,4 @@
-.header-misgifos {
+.header-favoritos {
     margin-top: 5px;
     text-align: center;
 
@@ -14,7 +14,7 @@
     }
 }
 
-#misgifos-vacio {
+#favoritos-vacio {
     text-align: center;
     margin-top: 40px;
     display: none;
@@ -33,13 +33,12 @@
     }
 }
 
-#misgifos-creados {
+#gifos-favoritos {
     margin-top: 20px;
     text-align: center;
 }
 
-.resultados-misgifos {
-    //el contenedor con las 4 columnas
+.resultados-favoritos {
     margin: 38px 10px 53px 10px;
     display: flex;
     flex-wrap: wrap;
@@ -47,27 +46,29 @@
     justify-content: center;
 }
 
-.resultados-gif-box-misgifos {
-    //la caja con cada gif
+.resultados-gif-box-fav {
     width: 156px;
     height: 120px;
     overflow: hidden;
     margin: 0 10px 25px 10px;
 }
 
-.gif-acciones-resultados-misgifos {
+.gif-acciones-resultados-fav {
     display: none;
 }
 
-@media screen and (min-width: 1024px) {
-    .header-misgifos {
+@media screen and (min-width:1024px) {
+
+    .header-favoritos {
         margin-top: 11px;
+
         h1 {
             font-size: 25px;
+
         }
     }
- 
-    #misgifos-vacio {
+
+    #favoritos-vacio {
         margin-top: 110px;
         margin-bottom: 136px;
 
@@ -79,12 +80,11 @@
             font-size: 22px;
             line-height: 33px;
             margin-top: 24px;
-            padding: 0 50px;
+            padding: 0 52px;
         }
     }
 
-    .resultados-misgifos {
-        //el contenedor con las 4 columnas
+    .resultados-favoritos {
         margin: 38px 10px 53px 10px;
         display: flex;
         flex-wrap: wrap;
@@ -92,14 +92,13 @@
         justify-content: center;
     }
 
-    .resultados-gif-box-misgifos {
-        //la caja con cada gif
+    .resultados-gif-box-fav {
         width: 220px;
         height: 200px;
         margin: 0 10px 25px 10px;
     }
 
-    .gif-acciones-resultados-misgifos {
+    .gif-acciones-resultados-fav {
         position: absolute;
         z-index: 0;
         background-color: $violeta-op2;
@@ -125,7 +124,7 @@
         border: none;
     }
 
-    .borrar {
+    .favorito-fav {
         cursor: pointer;
     }
 
@@ -143,13 +142,13 @@
         background-color: $blanco;
     }
 
-    .textos-descripcion-gif-misgifos {
+    .textos-descripcion-gif-favoritos {
         position: absolute;
         bottom: 30px;
         left: 18px;
     }
 
-    .user-gif-misgifos {
+    .user-gif-favoritos {
         @include textos-mobile;
         text-align: left;
         color: $blanco;
@@ -160,7 +159,7 @@
         margin-bottom: 6px;
     }
 
-    .titulo-gif-misgifos {
+    .titulo-gif-favoritos {
         @include textos-mobile;
         text-align: left;
         color: $blanco;
@@ -171,27 +170,30 @@
         margin: 0;
     }
 
-    .resultados-gif-box-misgifos:hover .gif-acciones-resultados-misgifos {
+    .resultados-gif-box-fav:hover .gif-acciones-resultados-fav {
         display: block;
     }
 }
 
+
 @media screen and (min-width: 1440px) {
-    .resultados-misgifos {
+
+    .resultados-favoritos {
         margin: 59px 146px 47px 146px;
     }
 
-    .resultados-gif-box-misgifos {
+    .resultados-gif-box-fav {
         width: 260px;
         height: 200px;
         margin: 0 15px 31px 15px;
     }
 
-    .gif-acciones-resultados-misgifos {
+    .gif-acciones-resultados-fav {
         position: absolute;
         z-index: 0;
         background-color: $violeta-op2;
         width: 260px;
         height: 200px;
     }
+
 }
