--- a/styles/generales/_mixins.scss
+++ b/styles/generales/_mixins.scss
@@ -1,4 +1,7 @@
-//tipografias
+  //------------//
+ //TIPOGRAFÍAS //
+//------------//
+
 @mixin menu-mobile {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
