--- a/styles/generales/_variables.scss
+++ b/styles/generales/_variables.scss
@@ -1,4 +1,10 @@
-//colores
+  //-----------------//
+ //VARIABLES COLORES//
+//-----------------//
+
+
+
+//---------------------------------------//
 $violeta: #572EE5;
 $violeta-op: rgba(87,46,229,0.9);
 $violeta-op2:rgba(87,46,229,0.6);
@@ -12,22 +18,8 @@ $blanco: #ffffff;
 $blanco-op: rgba(255, 255, 255, 0.7);
 $blanco-modal:rgba(255, 255, 255, 0.9);
 $negro-modal:#37383cea;
+//---------------------------------------//
 
-//tipografias
 $montse: 'Montserrat', sans-serif;
 $roboto: 'Roboto', sans-serif;
-
-
-/* body {
-    --main-bg-color: yellow;
-    --main-txt-color: blue;  
-    --main-padding: 15px;  
-  }
-
-  body.dark {
-    --main-bg-color: red;
-    --main-txt-color: blue;  
-    --main-padding: 15px;  
-  }
-   */
-  
+//---------------------------------------//
