--- a/styles/nocturno/_home.scss
+++ b/styles/nocturno/_home.scss
@@ -23,7 +23,7 @@
         }
     }
 
-    //busqueda
+    //BUSQUEDA
     .buscador-activo {
         border: 1px solid $blanco;
         
@@ -67,7 +67,7 @@
         color: $violeta;
     }
 
-    //seccion trending
+    //TRENDING
     .trending {
         background-color: $gris-trending-oscuro;
     
