--- a/styles/nocturno/_modal.scss
+++ b/styles/nocturno/_modal.scss
@@ -1,4 +1,8 @@
-//modal maximizar gif
+  //---------------------//
+ //MAXIMIZAR GIF MODAL  //
+//---------------------//
+
+
 .body-dark {
     .modal-activado {
         background-color: $negro-modal;
